# ez-xml

./: LICENSE  README.md  pyproject.toml
ez/peppol/: __init__.py  _invoice.py
ez/ubl/: __init__.py  _constants.py  _invoice.py
ez/xml/: __init__.py  model.py  model_pydantic.py
tests/ez/: test_model.py
tests/ez/peppol/: test_invoice.py
tests/ez/peppol/schematron/: CEN-EN16931-UBL.xsl  convert_sch_to_xsl.py
tests/ez/ubl/: test_invoice.py
tests/ez/xml/: test_model.py  test_model_pydantic.py
