[project]
name = "ezxml"
version = "0.1.0"
description = ""
authors = [{ name = "agonzalezl", email = "angel.gonzalez.lpz@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "lxml>=6.1.0,<7",
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.12,<0.16",
]

[tool.uv]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml"
ignore_missing_imports = true

[tool.uv.build-backend]
module-name = ["ez"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
