[project]
name = "ezxml"
version = "0.1.0"
description = "A Python library for generating XML from Python objects using dataclasses, with built-in support for UBL 2.1 documents."
keywords = ["xml", "ubl", "invoice", "dataclass", "lxml"]
authors = [{ name = "agonzalezl", email = "angel.gonzalez.lpz@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = { text = "MIT" }
repository = "https://github.com/agonzalezl/ez-xml"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "lxml>=6.1.0,<7",
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.12,<0.16",
]

[tool.uv]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml"
ignore_missing_imports = true

[tool.uv.build-backend]
module-name = ["ez"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
